2008-02-22  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/wind.c (render_wind) (render_blast): fixed calls
	to gimp_drawable_mask_intersect() which was causing a crash as
	reported in bug #516369.

2008-02-21  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/actions/plug-in-actions.c (plug_in_actions_history_changed):
	don't call plug_in_actions_update() because that updated the
	sensitivity of *all* plug-in actions according to the properties
	of the *current* image. Instead, look up the original GtkAction of
	the history items of *this* action group and copy the sensitivity
	from that action. Fixes bug #517683.

2008-02-19  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from trunk:

	* plug-ins/jpeg/jpeg-exif.c: correctly record dimensions when
	saving an image.  Fixes bug #517077.
	
2008-02-19  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/script-fu/scripts/glossy.scm: applied patch from
	Ulf-D. Ehlert that fixes a bug in the Glossy script when used with
	a pattern instead of a gradient blend (bug #517285).

2008-02-16  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/display/gimpdisplayshell-callbacks.c
	* app/tools/gimpforegroundselecttool.c
	* app/tools/gimpimagemaptool.c
	* app/tools/gimpiscissorstool.c
	* app/tools/gimprectangletool.c
	* app/tools/gimptransformtool.c
	* app/tools/gimpvectortool.c
	* app/widgets/gimpcontainerpopup.c
	* app/widgets/gimppaletteview.c
	* libgimpwidgets/gimpcolorhexentry.c
	* libgimpwidgets/gimpnumberpairentry.c
	* plug-ins/script-fu/script-fu-console.c: Unify the handling of
	various "Enter" and "Space" keysyms all over the place. Fixes bug
	#516544 (also see gtk bug #515047).

2008-02-14  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/text/gimpfont.c (gimp_font_get_sample_string): check if the
	font has the glyphs from the sample string. Fixes bug #514021.

2008-02-11  Sven Neumann  <sven@gimp.org>

	Merged from trunk:
